Update 'zuyyoqddn-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:8a83f082b69e9b7de28ff180e6362336cf31868c@sha256:085e9240e95ae0e476929b7a12ff96472022be1e2f0baacfb0aa0153652d3967

--- a/components/zuyyoqddn-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/zuyyoqddn-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zuyyoqddn-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:8a83f082b69e9b7de28ff180e6362336cf31868c@sha256:085e9240e95ae0e476929b7a12ff96472022be1e2f0baacfb0aa0153652d3967
+          name: container-image
